--- a/pages/blog/generated-color-palettes.mdx
+++ b/pages/blog/generated-color-palettes.mdx
@@ -41,7 +41,7 @@ import {
 
 <Headline>{metadata.title}</Headline>
 
-Most monitors use the sRGB color spectrum, which basically mean they can represent a limited subset of the colors we can see in real life.
+Most monitors use the sRGB color spectrum, which basically means they can represent a limited subset of the colors we can see in real life.
 
 <Row tag="figure" style={{  fontSize: "0.8em", margin: "0" }}>
 
