feat: add thumbnails to post listings

--- a/pages/blog/generated-color-palettes.mdx
+++ b/pages/blog/generated-color-palettes.mdx
@@ -4,6 +4,7 @@ export const metadata = {
   socialImage: "/blog/generated-color-palettes/social-image.png",
   description:
     "Why you shouldn’t trust color functions like hsl(), lighten() or darken()",
+  thumbnail: "/blog/generated-color-palettes/thumbnail.svg",
 };
 
 import BlogPostLayout from "../../components/BlogPostLayout";
