content: add link to color palettes article

--- a/pages/blog/generated-color-palettes.mdx
+++ b/pages/blog/generated-color-palettes.mdx
@@ -479,3 +479,4 @@ Links of interest:
 - [Chroma.js documentation](https://gka.github.io/chroma.js/)
 - [Leonardo Color npm package](https://www.npmjs.com/package/@adobe/leonardo-contrast-colors)
 - [Leonardo Color web UI](https://leonardocolor.io/)
+- [huey](https://huey.design/) "rapid color palettes accross the rainbow" (select "Lab" color scaling mode for a result similar to the one from HSLuv)
